--- a/PhysicsGame.vcxproj
+++ b/PhysicsGame.vcxproj
@@ -208,6 +208,7 @@
     <ClCompile Include="Source\MapLapSensor.cpp" />
     <ClCompile Include="Source\ModuleAssetLoader.cpp" />
     <ClCompile Include="Source\ModuleAudio.cpp" />
+    <ClCompile Include="Source\ModuleUserPreferences.cpp" />
     <ClCompile Include="Source\SceneGame.cpp" />
     <ClCompile Include="Source\ModuleLocalization.cpp" />
     <ClCompile Include="Source\SceneOptions.cpp" />
@@ -245,6 +246,7 @@
     <ClInclude Include="Source\Module.h" />
     <ClInclude Include="Source\ModuleAssetLoader.h" />
     <ClInclude Include="Source\ModuleAudio.h" />
+    <ClInclude Include="Source\ModuleUserPreferences.h" />
     <ClInclude Include="Source\SceneGame.h" />
     <ClInclude Include="Source\ModuleLocalization.h" />
     <ClInclude Include="Source\SceneOptions.h" />
