--- a/PhysicsGame.vcxproj.filters
+++ b/PhysicsGame.vcxproj.filters
@@ -144,10 +144,13 @@
       <Filter>Modules\Type %28Module%29\Scene %28ModueScene%29</Filter>
     </ClCompile>
     <ClCompile Include="Source\SceneSelectSetup.cpp">
-    <Filter>Modules\Type %28Module%29\Scene %28ModueScene%29</Filter>
+      <Filter>Modules\Type %28Module%29\Scene %28ModueScene%29</Filter>
     </ClCompile>
     <ClCompile Include="Source\SceneIntro.cpp">
       <Filter>Modules\Type %28Module%29\Scene %28ModueScene%29</Filter>
+    </ClCompile>
+    <ClCompile Include="Source\ModuleUserPreferences.cpp">
+      <Filter>Modules\Type %28Module%29</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
@@ -257,6 +260,9 @@
     </ClInclude>
     <ClInclude Include="Source\SceneIntro.h">
       <Filter>Modules\Type %28Module%29\Scene %28ModueScene%29</Filter>
+    </ClInclude>
+    <ClInclude Include="Source\ModuleUserPreferences.h">
+      <Filter>Modules\Type %28Module%29</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
